--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "commitizen": "^4.3.1",
+    "daisyui": "^4.12.23",
     "next": "15.1.5",
     "react": "19.0.0",
     "react-dom": "19.0.0"
