--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cz": "cz"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.4.1",
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.23",
