--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.4.1",
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.23",
+    "image-size": "^1.2.0",
     "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0"
