--- a/package.json
+++ b/package.json
@@ -14,26 +14,24 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
-    "@tailwindcss/postcss": "^4.0.1",
     "@vercel/analytics": "^1.4.1",
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.23",
     "image-size": "^1.2.0",
     "next": "15.1.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-icons": "^5.4.0"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.1",
+    "eslint-config-next": "15.1.5",
+    "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "config": {
