--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cz": "cz"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.0.9",
@@ -22,6 +23,7 @@
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
