--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.24",
     "image-size": "^1.2.0",
+    "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
