--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "commitizen": "^4.3.1",
+    "cookies-next": "^5.1.0",
     "daisyui": "^4.12.24",
     "image-size": "^1.2.0",
     "next": "15.1.7",
