--- a/package.json
+++ b/package.json
@@ -15,14 +15,23 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.0.9",
+    "@turf/turf": "^7.2.0",
     "@vercel/analytics": "^1.5.0",
+    "@xmldom/xmldom": "^0.9.8",
+    "chart.js": "^4.4.8",
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.24",
     "image-size": "^1.2.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "turf": "^3.0.14",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^22",
