--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.0.9",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "@vercel/speed-insights": "^1.2.0",
     "commitizen": "^4.3.1",
     "cookies-next": "^5.1.0",
     "daisyui": "^4.12.24",
@@ -32,7 +32,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^22",
