--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "turf": "^3.0.14",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0"
   },
