--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@turf/turf": "^7.2.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@xmldom/xmldom": "^0.9.8",
     "chart.js": "^4.4.8",
-    "@vercel/speed-insights": "^1.2.0",
     "commitizen": "^4.3.1",
     "cookies-next": "^5.1.0",
     "daisyui": "^4.12.24",
@@ -31,12 +31,12 @@
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "turf": "^3.0.14",
-    "xml2js": "^0.6.2",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0"
+    "uuid": "^11.1.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^22",
