--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "daisyui": "^4.12.24",
     "gapi": "^0.0.3",
     "gapi-script": "^1.2.0",
+    "googleapis": "^146.0.0",
     "image-size": "^1.2.0",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0"
