--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "^1.5.0",
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.24",
+    "date-fns": "^4.1.0",
     "gapi": "^0.0.3",
     "gapi-script": "^1.2.0",
     "googleapis": "^146.0.0",
@@ -25,12 +26,14 @@
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
