--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.0.9",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.8.3",
     "commitizen": "^4.3.1",
     "daisyui": "^4.12.24",
     "date-fns": "^4.1.0",
