--- a/package.json
+++ b/package.json
@@ -22,25 +22,24 @@
     "@vercel/speed-insights": "^1.2.0",
     "@xmldom/xmldom": "^0.9.8",
     "chart.js": "^4.4.8",
-    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "commitizen": "^4.3.1",
     "cookies-next": "^5.1.0",
     "daisyui": "^4.12.24",
+    "date-fns": "^4.1.0",
     "image-size": "^1.2.0",
-    "lucide-react": "^0.477.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
-    "react-leaflet": "^5.0.0",
     "turf": "^3.0.14",
     "uuid": "^11.1.0",
     "xml2js": "^0.6.2"
