--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
