--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@turf/turf": "^7.2.0",
     "@vercel/analytics": "^1.5.0",
-    "axios": "^1.8.3",
     "@vercel/speed-insights": "^1.2.0",
     "@xmldom/xmldom": "^0.9.8",
+    "agent-base": "^7.1.3",
+    "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,6 +46,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-lifecycles-compat": "^3.0.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "turf": "^3.0.14",
