--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "@xmldom/xmldom": "^0.9.8",
+    "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "axios": "^1.8.3",
     "commitizen": "^4.3.1",
     "cookies-next": "^5.1.0",
     "daisyui": "^4.12.24",
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "turf": "^3.0.14",
