--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "tailwindcss-animate": "^1.0.7",
     "turf": "^3.0.14",
     "uuid": "^11.1.0",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "dompurify": "^3.2.6"
   },
   "devDependencies": {
     "@types/node": "^22",
